==> yspreen/VL53L0X-driver-pico-sdk-cpp/VL53L0X.cpp <==
#include "VL53L0X.h"

void VL53L0X::startTimeout()
{
    timeout_start_ms = to_ms_since_boot(get_absolute_time());
}

bool VL53L0X::checkTimeoutExpired()
{
    return io_timeout > 0 && (to_ms_since_boot(get_absolute_time()) - timeout_start_ms > io_timeout);
}

void VL53L0X::writeReg(uint8_t reg, uint8_t value)
{
    uint8_t buffer[2] = {reg, value};
    i2c_write_blocking(i2cPort, address, buffer, 2, false);
}

void VL53L0X::writeReg16Bit(uint8_t reg, uint16_t value)
{
    uint8_t buffer[3];
    buffer[0] = reg;
    // Value is big-endian, so split it into two bytes accordingly
    buffer[1] = (value >> 8) & 0xFF; // Value's high byte
    buffer[2] = value & 0xFF;        // Value's low byte
    i2c_write_blocking(i2cPort, address, buffer, 3, false);
}

uint8_t VL53L0X::readReg(uint8_t reg)
{
    uint8_t value = 0;
    i2c_write_blocking(i2cPort, address, &reg, 1, true); // true to keep master control of bus
    i2c_read_blocking(i2cPort, address, &value, 1, false);
    return value;
}

uint16_t VL53L0X::readReg16Bit(uint8_t reg)
{
    uint8_t buffer[2] = {0, 0};
    i2c_write_blocking(i2cPort, address, &reg, 1, true);   // true to keep master control of bus
    i2c_read_blocking(i2cPort, address, buffer, 2, false); // false to release the bus after read
    // The VL53L0X uses big-endian so we combine the two bytes accordingly
    return (uint16_t)(buffer[0] << 8) | buffer[1];
}

uint32_t VL53L0X::readReg32Bit(uint8_t reg)
{
    uint8_t buffer[4] = {0, 0, 0, 0};
    i2c_write_blocking(i2cPort, address, &reg, 1, true);   // true to keep master control of bus
    i2c_read_blocking(i2cPort, address, buffer, 4, false); // false to release the bus after read
    // The VL53L0X uses big-endian so we combine the four bytes accordingly
    return (uint32_t)(buffer[0] << 24) | (buffer[1] << 16) | (buffer[2] << 8) | buffer[3];
}

void VL53L0X::writeMulti(uint8_t reg, uint8_t const *src, uint8_t count)
{
    // Create a buffer that is one byte larger than count to accommodate the register address
    uint8_t buffer[count + 1];
    buffer[0] = reg; // First byte is register address
    // Copy the src data into the buffer starting at the second byte
    memcpy(buffer + 1, src, count);
    // Write the buffer to I2C
    last_status = i2c_write_blocking(i2cPort, address, buffer, count + 1, false);
}

void VL53L0X::readMulti(uint8_t reg, uint8_t *dst, uint8_t count)
{
    // First write the register address we want to read from
    last_status = i2c_write_blocking(i2cPort, address, &reg, 1, true);
    // Now read count bytes into the dst buffer
    if (last_status == PICO_ERROR_NONE)
    {
        last_status = i2c_read_blocking(i2cPort, address, dst, count, false);
    }
}
